# ichor

./: .claudeignore  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  PR_BODY_DRAFT.md  README.md  SECURITY.md  SPEC.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py  0002_collector_tables.py  0003_market_data.py  0004_backtest_runs.py  0005_phase1_collector_tables.py  0006_polygon_intraday.py  0007_confluence_history.py  0008_gex_snapshots.py  0009_couche2_outputs.py  0010_post_mortems.py  0011_pgvector_extension.py  0012_rag_chunks_index.py  0013_brier_optimizer_runs.py  0014_confluence_weights_history.py  0015_prompt_versions.py  0016_prompt_evals.py  0017_audit_log.py  0018_feature_flags.py  0019_economic_events.py  0020_fx_ticks.py  0021_couche2_add_macro_kind.py  0022_session_card_counterfactuals.py  0023_extend_cwh_regime_check.py  0024_extend_brier_algo_check.py  0025_finra_short_volume.py  0026_session_card_drivers.py  0027_session_type_extend_ny.py  0028_audit_log_immutable_trigger.py  0029_trader_notes.py  0030_cboe_skew_observations.py  0031_cftc_tff_observations.py  0032_cboe_vvix_observations.py  0033_treasury_tic_holdings.py  0034_nyfed_mct_observations.py  0035_cleveland_fed_nowcasts.py  0036_nfib_sbet_observations.py  0037_myfxbook_outlooks.py  0038_tool_call_audit.py  0039_scenarios_persistence.py  0040_rag_pgvector.py  (+18 more)
apps/api/src/ichor_api/: __init__.py  config.py  db.py  main.py  ml_loader.py  observability.py  schemas.py
apps/api/src/ichor_api/alerts/: __init__.py  catalog.py  crisis_mode.py  defs.py  evaluator.py  event_sentinel.py  scenario_invalidation.py
apps/api/src/ichor_api/briefing/: __init__.py  context_builder.py
apps/api/src/ichor_api/cli/: __init__.py  _exit.py  embed_session_cards.py  reconcile_outcomes.py  refresh_scenario_calibration.py  run_addendum_generator.py  run_benchmark_gate.py  run_bidask_spread_check.py  run_briefing.py  run_brier_aggregator.py  run_brier_drift_check.py  run_brier_optimizer.py  run_brier_optimizer_v2.py  run_bundesbank_bund.py  run_calibration_witness.py  run_cb_tone_check.py  run_collectors.py  run_concept_drift.py  run_couche2_agent.py  run_counterfactual_batch.py  run_crisis_check.py  run_data_freshness_check.py  run_data_surprise_check.py  run_divergence_scan.py  run_dollar_smile_check.py  run_dtw_analogue.py  run_ecb_estr.py  run_economic_event_actuals_reconcile.py  run_eia_crude_stocks.py  run_event_sentinel.py  run_fx_stream.py  run_gdelt_tone_scorer.py  run_geopol_flash_check.py  run_geopol_regime_check.py  run_har_rv.py  run_hmm_regime.py  run_hy_ig_spread_check.py  run_liquidity_check.py  run_macro_quartet_check.py  run_macro_quintet_check.py  (+26 more)
apps/api/src/ichor_api/collectors/: __init__.py  aaii.py  ai_gpr.py  arxiv_qfin.py  binance_funding.py  bls.py  bluesky.py  boe_iadb.py  bundesbank_bund.py  cboe_skew.py  cboe_vvix.py  central_bank_speeches.py  cftc_tff.py  cleveland_fed_nowcast.py  cme_zq_futures.py  cot.py  crypto_fear_greed.py  defillama.py  dts_treasury.py  ecb_estr.py  ecb_sdmx.py  eia_petroleum.py  finra_short.py  flashalpha.py  forex_factory.py  fred.py  fred_extended.py  gdelt.py  gex_yfinance.py  kalshi.py  manifold.py  market_data.py  mastodon.py  myfxbook_outlook.py  nfib_sbet.py  nyfed_mct.py  persistence.py  polygon.py  polygon_fx_stream.py  polygon_news.py  (+8 more)
apps/api/src/ichor_api/graph/: __init__.py  populator.py
apps/api/src/ichor_api/middleware/: __init__.py  ai_watermark.py
apps/api/src/ichor_api/models/: __init__.py  alert.py  auto_improvement_log.py  backtest_run.py  base.py  bias_signal.py  briefing.py  brier_aggregator_weights.py  bund_10y_observation.py  cb_speech.py  cboe_skew_observation.py  cboe_vvix_observation.py  cftc_tff_observation.py  cleveland_fed_nowcast.py  (+34 more)
apps/api/tests/: conftest.py  test_addendum_generator.py  test_adr017_filter.py  test_adr017_filter_unicode.py  test_adr017_scrub.py  test_adr017_ssot_reexport.py  test_ai_gpr_parser.py  test_ai_watermark_middleware.py  test_alerts_runner.py  test_alerts_runner_notify.py  test_analogue_library.py  test_app_import_sanity.py  test_architecture_invariants.py  test_asian_session.py  test_asset_news_affinity.py  test_auto_improvement_log_service.py  test_benchmark_gate.py  test_briefing_context.py  test_brier.py  test_brier_aggregator_cli.py  test_brier_multiclass.py  test_brier_optimizer_cli.py  test_brier_optimizer_v2.py  test_bundesbank_bund.py  test_c3_volume_vote_wiring.py  test_c3b_cot_vote_wiring.py  test_calendar_cb_permanence.py  test_calendar_ff_merge.py  test_calendar_recent_window.py  test_calibration_scoreboard.py  test_calibration_witness.py  test_card_coherence.py  test_card_golden_harness.py  test_causal_propagation.py  test_cb_intervention.py  test_cb_tone_check.py  test_cboe_skew.py  test_cboe_vvix.py  test_central_bank_speeches.py  test_cftc_tff.py  (+236 more)
apps/api/tests/fixtures/: ff_titles_60d_high_medium_2026-05-24.json
apps/api/tests/golden/: fuser_conviction_golden.json  session_card_golden.json
apps/claude-runner/: README.md  pyproject.toml
apps/claude-runner/src/ichor_claude_runner/: __init__.py  auth.py  config.py  main.py  models.py  rate_limiter.py  subprocess_runner.py
apps/claude-runner/tests/: test_agent_task_endpoint.py  test_async_admission.py  test_models.py  test_rate_limiter.py  test_subprocess_runner.py
apps/ichor-mcp/: README.md  ichor.mcp.json  pyproject.toml
apps/ichor-mcp/src/ichor_mcp/: __init__.py  client.py  config.py  server.py
apps/ichor-mcp/tests/: test_capability5_e2e.py  test_client.py
archive/2026-05-03-pre-reset/backtest/: pyproject.toml
archive/2026-05-03-pre-reset/backtest/tests/: test_backtest.py
archive/2026-05-03-pre-reset/risk/: pyproject.toml
archive/2026-05-03-pre-reset/trading/: pyproject.toml
archive/2026-05-03-pre-reset/trading/tests/: test_trading.py
(+976 files in other folders)
