[project]
name = "ichor-api"
version = "0.0.0"
description = "Ichor — FastAPI backend (Hetzner). Briefings, alerts, websockets, ML serving."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "httpx>=0.28.0",
    "defusedxml>=0.7.1",
    "structlog>=25.1.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    # Phase 2: Couche-2 agents lib (path-resolved via uv workspace below).
    "ichor-agents",
    # W105d (ADR-085) : Pass-6 scenario_decompose 7-bucket schema lives
    # canonically in `ichor_brain` ; `ichor_api.services.scenarios`
    # re-exports for the ORM column + tests + CI guards.
    "ichor-brain",
    # Phase 2: numerical stack (Brier optimizer, DTW analogues, RAG embedding).
    "numpy>=1.26.0",
    # Phase 2: Polygon Forex WebSocket subscriber (VPIN microstructure feed).
    "websockets>=14.0",
    # Phase A.4 observability — exposes /metrics for Prometheus scrape
    # (was scraped silently failing because the endpoint didn't exist).
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Phase A.4.c (ADR-032) — Langfuse @observe traces on the 4-pass
    # orchestrator + 5 Couche-2 agents. SDK v4 (March 2026 rewrite) is
    # required for the bare `from langfuse import observe` import.
    # Self-hosted Langfuse v3 docker stack lives on Hetzner under
    # /opt/ichor/langfuse (cf infra/ansible/roles/langfuse/).
    "langfuse>=4.0.0",
    # Capability 5 STEP-1 (W83, ADR-071) — sqlglot AST whitelist parser
    # used by `services.tool_query_db.validate_query`. Pure-Python.
    "sqlglot>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]
# Phase 2 RAG stack — install via `uv pip install -e ".[ml]"` on the
# Hetzner box that runs the embedding worker. Kept out of the core deps
# so apps/api can boot without optimum/transformers when RAG is disabled
# via feature_flags.is_enabled('rag_pass1_enabled').
ml = [
    "optimum[onnxruntime]>=1.23.0",
    "transformers>=4.45.0",
]
# Phase D (ADR-087) — auto-improvement loops. River brings the ADWIN
# drift detector (W114) ; future Phase D adds (W115 Vovk-AA aggregator
# is ~50 LOC custom, W116 PBS pure-Python, W117 DSPy stays in its own
# package gate). Kept optional so apps/api boots without river when
# the nightly auto-improvement timers are disabled.
phase-d = [
    "river>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ichor_api"]

# uv workspace resolution — points `ichor-agents` to the local package.
# Cf https://docs.astral.sh/uv/reference/settings/#sources
[tool.uv.sources]
ichor-agents = { path = "../../packages/agents", editable = true }
ichor-brain = { path = "../../packages/ichor_brain", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-ra --strict-markers"
