[project]
name = "ichor-claude-runner"
version = "0.0.0"
description = "Ichor — local Win11 FastAPI :8765, subprocesses claude -p headless via Max 20x"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=25.1.0",
    "anyio>=4.7.0",
    "httpx>=0.28.0",
    # Pin starlette to the line apps/api resolves + passes with (0.52.x +
    # httpx 0.28.x). With fewer deps than apps/api, claude-runner's uv resolve
    # otherwise pulls a NEWER starlette whose TestClient hard-requires the
    # `httpx2` package, breaking pytest collection in CI
    # (ModuleNotFoundError: No module named 'httpx2' → exit 2). Pinning below
    # that boundary keeps TestClient on httpx 0.28 (no httpx2). Revisit when
    # we migrate the test suite to httpx 2.x deliberately.
    #
    # SECURITY NOTE (2026-06-05 — Dependabot #28 / CVE-2026-48710 /
    # GHSA-86qp-5c8j-p5mr, moderate 6.5): starlette <= 1.0.0 is vulnerable to
    # Host-header request smuggling (request.url.path can diverge from the
    # requested path → path-based check bypass). The ONLY patched version is
    # 1.0.1, which is OUTSIDE this pin. We deliberately HOLD the bump here
    # rather than ship an unverifiable framework migration on the live Voie-D
    # runner: 1.0.1 re-trips the httpx2 TestClient break above (the test suite
    # uses fastapi.testclient) and likely needs a fastapi co-bump (0.118→0.128).
    # Mitigation: the runner is reachable ONLY via the authenticated Cloudflare
    # Access tunnel, which gates the crafted-Host attack vector. Tracked as a
    # deliberate starlette-1.0 + httpx-2.x migration (verify in an isolated
    # venv + deploy-coordinated), NOT a hotfix.
    "starlette>=0.47,<0.53",
    # python-jose 3.3.0-era versions are vulnerable to CVE-2024-33663
    # (algorithm-confusion) + CVE-2025-61152 (timing-attack). Lib was
    # dormant 2021-2024, resumed 3.5.0 in May 2025. Floor bumped to
    # 3.5.0 in r46-round-5 per dependency-auditor recommendation
    # (round-46-round-3 audit). Future migration to `pyjwt` or
    # `joserfc` recommended (FastAPI docs prefer pyjwt for new code)
    # but defer until python-jose actually breaks something.
    "python-jose[cryptography]>=3.5.0",  # CF Access JWT verify
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ichor_claude_runner"]
