[project]
name = "ichor-claude-runner"
version = "0.0.0"
description = "Ichor — local Win11 FastAPI :8765, subprocesses claude -p headless via Max 20x"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=25.1.0",
    "anyio>=4.7.0",
    "httpx>=0.28.0",
    # starlette>=1.0.1 closes CVE-2026-48710 (GHSA-86qp-5c8j-p5mr — Host-header
    # request smuggling; request.url.path could diverge from the requested path
    # → path-based check bypass). 1.0.1 is the ONLY patched release. starlette
    # 1.x's TestClient prefers `httpx2` (Pydantic's next-gen httpx) and emits a
    # StarletteDeprecationWarning when only plain httpx is present, which the
    # root `filterwarnings = error` turns into a pytest collection error — so we
    # add httpx2 to the dev extras below (test-only). The RUNTIME CF-Access JWT
    # path (auth.py) stays on httpx 0.28; httpx2 never touches production code.
    # Verified 2026-06-05 in an isolated venv: starlette 1.2.1 + fastapi 0.136.3
    # + httpx 0.28.1 + httpx2 2.3.0 → 27/27 runner tests pass in strict-warning
    # mode. (Supersedes the prior <0.53 pin that held back this CVE fix.)
    "starlette>=1.0.1",
    # python-jose 3.3.0-era versions are vulnerable to CVE-2024-33663
    # (algorithm-confusion) + CVE-2025-61152 (timing-attack). Lib was
    # dormant 2021-2024, resumed 3.5.0 in May 2025. Floor bumped to
    # 3.5.0 in r46-round-5 per dependency-auditor recommendation
    # (round-46-round-3 audit). Future migration to `pyjwt` or
    # `joserfc` recommended (FastAPI docs prefer pyjwt for new code)
    # but defer until python-jose actually breaks something.
    "python-jose[cryptography]>=3.5.0",  # CF Access JWT verify
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    # starlette 1.x TestClient backend (test-only; runtime stays on httpx 0.28).
    # Without it the StarletteDeprecationWarning trips root filterwarnings=error.
    "httpx2>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ichor_claude_runner"]
