[project]
name = "ichor-mcp"
version = "0.0.0"
description = "Ichor — local Win11 MCP stdio server (Capability 5 client tools, ADR-071 STEP-3)"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.12.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[project.scripts]
ichor-mcp = "ichor_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ichor_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-ra --strict-markers"
