[project]
name = "ichor-backtest"
version = "0.0.0"
description = "Ichor — walk-forward backtest framework with leakage guard, fee/slippage model, and equity-curve evaluation. Paper-only by ADR-016 contract."
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26.0,<2.0",
    "pandas>=2.2.0",
    "structlog>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ichor_backtest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
